# pydantic-eda

./: .gitignore  README.md  cached_specs.json  gen_models.py  pyproject.toml
pydantic_eda/: __init__.py  core.py
pydantic_eda/apps/aaa/v1alpha1/: models.py
pydantic_eda/apps/aifabrics/v1alpha1/: models.py
pydantic_eda/apps/appstore/v1/: models.py
pydantic_eda/apps/bootstrap/v1alpha1/: bootstrap.py  models.py
pydantic_eda/apps/components/v1/: components.py  models.py
pydantic_eda/apps/config/v1alpha1/: models.py
pydantic_eda/apps/core/v1/: models.py
pydantic_eda/apps/environment/v1alpha1/: models.py
pydantic_eda/apps/fabrics/v1alpha1/: models.py
pydantic_eda/apps/filters/v1alpha1/: models.py
pydantic_eda/apps/interfaces/v1alpha1/: models.py
pydantic_eda/apps/oam/v1alpha1/: models.py
pydantic_eda/apps/os/v1alpha1/: models.py
pydantic_eda/apps/protocols/v1/: models.py
pydantic_eda/apps/protocols/v1alpha1/: models.py  protocols.py
pydantic_eda/apps/qos/v1/: models.py
pydantic_eda/apps/qos/v1alpha1/: models.py
pydantic_eda/apps/routing/v1alpha1/: models.py
pydantic_eda/apps/routingpolicies/v1alpha1/: models.py  routingpolicies.py
pydantic_eda/apps/security/v1alpha1/: models.py  security.py
pydantic_eda/apps/services/v1/: models.py
pydantic_eda/apps/services/v1alpha1/: models.py  services.py
pydantic_eda/apps/siteinfo/v1alpha1/: models.py  siteinfo.py
pydantic_eda/com/nokia/: __init__.py
pydantic_eda/core/v1alpha1/: models.py
pydantic_eda/core/v25_8_1/: models.py
pydantic_eda/core/v25_8_1-rc1/: models.py
(+49 files in other folders)
